@@ -1,3 +1,8 @@
+2000-01-23  Peter Teichman  <peter@helixcode.com>
+
+	* gnome-pilot.m4: i broke the version-checking macro for other
+	distribs in my last commit. fixing that now.
+
 2000-01-23  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-libgtop-check.m4 (GNOME_LIBGTOP_TYPES): Check for
